--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Резюме</title>
+    <style>body{background-color:#171717;color:#171717;height:100vh;overflow:hidden;}</style>
   </head>
   <body>
     <div class="loading-screen">
