--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Резюме</title>
-    <style>body{background-color:#171717;color:#171717;height:100vh;overflow:hidden;}</style>
+    <meta name="description" content="Владимир Ишутин | Сайт визитка" />
+    <style>
+      body {
+        background-color: #171717;
+        color: #171717;
+        height: 100vh;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <div class="loading-screen">
       <svg width="200" height="200" viewBox="0 0 100 100">
-        <polyline class="line-cornered stroke-still" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
-        <polyline class="line-cornered stroke-still" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
-        <polyline class="line-cornered stroke-animation" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
-        <polyline class="line-cornered stroke-animation" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
+        <polyline
+          class="line-cornered stroke-still"
+          points="0,0 100,0 100,100"
+          stroke-width="10"
+          fill="none"
+        ></polyline>
+        <polyline
+          class="line-cornered stroke-still"
+          points="0,0 0,100 100,100"
+          stroke-width="10"
+          fill="none"
+        ></polyline>
+        <polyline
+          class="line-cornered stroke-animation"
+          points="0,0 100,0 100,100"
+          stroke-width="10"
+          fill="none"
+        ></polyline>
+        <polyline
+          class="line-cornered stroke-animation"
+          points="0,0 0,100 100,100"
+          stroke-width="10"
+          fill="none"
+        ></polyline>
       </svg>
     </div>
     <main id="container">
@@ -41,100 +69,105 @@
           <span>19 y.o</span>
           <span>VSU CS student</span>
         </div>
-        <ul data-scroll data-scroll-speed="2">
+        <div class="list" data-scroll data-scroll-speed="2">
           Background
-          <li>Графичекий дизайнер ( фриланс )</li>
-          <li>> 2 лет</li>
-          <li>Преподаватель веб и графического дизайна</li>
-          <li>> года</li>
-          <li>Креативный директор</li>
-          <li>> 6 месяцев</li>
-        </ul>
-        <ul data-scroll data-scroll-speed="4" class="skills">
+          <ul>
+            <li>Графичекий дизайнер ( фриланс )</li>
+            <li>> 2 лет</li>
+            <li>Преподаватель веб и графического дизайна</li>
+            <li>> года</li>
+            <li>Креативный директор</li>
+            <li>> 6 месяцев</li>
+          </ul>
+        </div>
+        <div class="list skills" data-scroll data-scroll-speed="4">
           Skills
-          <li>Adobe:</li>
-          <br />
-          <li>Photoshop - advanced</li>
-          <li>Xd - intermediate</li>
-          <li>Illustrator - intermediate</li>
-          <li>After effects - beginner</li>
-          <li>InDesign - beginner</li>
-          <li>Dimension - beginner</li>
-          <li>Animate - beginner</li>
-          <li>Premiere Rush - beginner</li>
-          <li>Spark - beginner</li>
-          <li>Comp - intermediate</li>
-          <br />
-          <li>Ms office - intermediate</li>
-          <br />
-          <li>English - Pre-intermediate</li>
-        </ul>
-
-        <ul
-          class="experience"
+          <ul>
+            <li>Adobe:</li>
+            <li><br />Photoshop - advanced</li>
+            <li>Xd - intermediate</li>
+            <li>Illustrator - intermediate</li>
+            <li>After effects - beginner</li>
+            <li>InDesign - beginner</li>
+            <li>Dimension - beginner</li>
+            <li>Animate - beginner</li>
+            <li>Premiere Rush - beginner</li>
+            <li>Spark - beginner</li>
+            <li>Comp - intermediate</li>
+            <li><br />Ms office - intermediate</li>
+            <li><br />English - Pre-intermediate</li>
+          </ul>
+        </div>
+        <div
+          class="list experience"
           data-scroll
           data-scroll-offset="-100%"
           data-scroll-speed="-3"
         >
           Experience
-          <li>
-            Детская школа дополнительного образования TeenSmart<br />
-            Преподаватель 08/2020 - 05/2021
-          </li>
-          <li>
-            -Ведение занятий с детьми возрастом от 8 до 16 лет<br />
-            -Приглашение напробное занятие теплых клиентов<br />
-            -Отработка претензий и общение с родителями
-          </li>
-          <li>
-            Студия визуального маркетинга E-pic<br />
-            Creative Director 09/2020 - 02/2021
-          </li>
-          <li>
-            -Работа над визуальной составляющей студии<br />
-            -Анализ/сбор информации определение потребностей клиента<br />
-            -Распределение задач для коллектива и аутсорс
-            сотрудников/компаний<br />
-            -Создание первичных макетов -Контроль финального продукта
-          </li>
-          <li>
-            Дизайн студия Prizmarine<br />
-            Creative Director/Lead Designer с 03/2021
-          </li>
-          <li>
-            -Создание визуальной концепции для студии<br />
-            -Анализ/сбор информации определение потребностей клиента<br />
-            -Распределение задач для коллектива и аутсорс
-            сотрудников/компаний<br />
-            -Ведение кейса от первичного макета, до финального продукта
-          </li>
-        </ul>
+          <ul>
+            <li>
+              Детская школа дополнительного образования TeenSmart<br />
+              Преподаватель 08/2020 - 05/2021
+            </li>
+            <li>
+              -Ведение занятий с детьми возрастом от 8 до 16 лет<br />
+              -Приглашение напробное занятие теплых клиентов<br />
+              -Отработка претензий и общение с родителями
+            </li>
+            <li>
+              Студия визуального маркетинга E-pic<br />
+              Creative Director 09/2020 - 02/2021
+            </li>
+            <li>
+              -Работа над визуальной составляющей студии<br />
+              -Анализ/сбор информации определение потребностей клиента<br />
+              -Распределение задач для коллектива и аутсорс
+              сотрудников/компаний<br />
+              -Создание первичных макетов -Контроль финального продукта
+            </li>
+            <li>
+              Дизайн студия Prizmarine<br />
+              Creative Director/Lead Designer с 03/2021
+            </li>
+            <li>
+              -Создание визуальной концепции для студии<br />
+              -Анализ/сбор информации определение потребностей клиента<br />
+              -Распределение задач для коллектива и аутсорс
+              сотрудников/компаний<br />
+              -Ведение кейса от первичного макета, до финального продукта
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="renderContainer" data-scroll-section>
         <h1>Work in progress</h1>
-
-        <ul class="desk" data-scroll data-scroll-speed="2">
+        <div class="list desk" data-scroll data-scroll-speed="2">
           <h2>
             Внедрение 3D моделей и интеррактивных<br />
             визуализаций в WEB
           </h2>
-          <li>-Создание моделей</li>
-          <li>-Настройка камеры и освещения</li>
-          <li>-Оптимизация</li>
-        </ul>
-        <div class="render-bg"></div>
+          <ul>
+            <li>-Создание моделей</li>
+            <li>-Настройка камеры и освещения</li>
+            <li>-Оптимизация</li>
+          </ul>
+        </div>
 
-        <ul
-          class="contact"
+        <div class="render-bg"></div>
+        <div
+          class="list contact"
           data-scroll
           data-scroll-offset="-50%"
           data-scroll-speed="-1"
         >
           <h2>Contact me</h2>
-          <li>Phone +7 (980) 554-39-85</li>
-          <li>Email vlshutin@mail.ru</li>
-          <li>Voronezh</li>
-        </ul>
+          <ul>
+            <li>Phone +7 (980) 554-39-85</li>
+            <li>Email vlshutin@mail.ru</li>
+            <li>Voronezh</li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
