--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             Hello<br />
             My name is
           </h1>
-          <h2>Vladimir Ishutin</h2>
+          <h2>Vladimir Bezzubik</h2>
         </div>
 
         <div class="desc" data-scroll data-scroll-speed="2">
@@ -108,7 +108,7 @@
           <ul>
             <li>
               Детская школа дополнительного образования TeenSmart<br />
-              Преподаватель 08/2020 - 05/2021
+              Преподаватель 09/2020 - 03/2021
             </li>
             <li>
               -Ведение занятий с детьми возрастом от 8 до 16 лет<br />
@@ -117,7 +117,7 @@
             </li>
             <li>
               Студия визуального маркетинга E-pic<br />
-              Creative Director 09/2020 - 02/2021
+              Creative Director 11/2020 - 02/2021
             </li>
             <li>
               -Работа над визуальной составляющей студии<br />
@@ -128,7 +128,7 @@
             </li>
             <li>
               Дизайн студия Prizmarine<br />
-              Creative Director/Lead Designer с 03/2021
+              Creative Director/Lead Designer с 09/2020
             </li>
             <li>
               -Создание визуальной концепции для студии<br />
